# AgenticAccessGovernance

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_server.py  run_test.py
data/: entitlements.json  policies.json  systems.json  users.json
data/requests/: REQ001.json  REQ002.json  REQ003.json  REQ004.json  REQ005.json
src/: __init__.py  crew.py
src/agents/: gov_agents.py
src/api/: main.py
src/config/: agents.yaml  settings.py  tasks.yaml
src/db/: iam_database.py
src/models/: access_request.py  policy.py  user.py
src/tasks/: gov_tasks.py
src/tools/: audit_logger.py  certification_checker.py  entitlement_lookup.py  policy_checker.py  risk_scorer.py  sod_validator.py
tests/: test_api.py
