[tool.poetry]
name = "agentic-access-governance"
version = "0.1.0"
description = "AI-powered Identity Access Management governance system for financial services"
authors = ["OpenClaw Agent <agent@openclaw.ai>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.84.0"
crewai-tools = "^0.17.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.0"
openai = "^1.54.0"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
httpx = "^0.27.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
rich = "^13.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]